add deepwiki tool. super cool

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@
 #quarkus.langchain4j.openai.chat-model.max-tokens=1000
 #quarkus.langchain4j.openai.chat-model.frequency-penalty=0
 
+#Ollama
 quarkus.langchain4j.chat-model.provider=ollama
 quarkus.langchain4j.ollama.chat-model.base-url=http://localhost:11434
 quarkus.langchain4j.ollama.chat-model.model-name=llama3.1
@@ -14,6 +15,13 @@ quarkus.langchain4j.ollama.chat-model.log-requests=true
 quarkus.langchain4j.ollama.chat-model.log-responses=true
 quarkus.langchain4j.ollama.timeout=60s
 
+#MCP
+quarkus.langchain4j.mcp.deepwiki.transport-type=http
+# Define the URL of the running MCP server's Server-Sent Events (SSE) endpoint.
+# This assumes the server is running locally on port 8080.
+quarkus.langchain4j.mcp.deepwiki.url=https://mcp.deepwiki.com/sse
+quarkus.langchain4j.mcp.deepwiki.log-requests-true
+quarkus.langchain4j.mcp.deepwiki.log-responses=true
 
 #RAG
 quarkus.langchain4j.pgvector.dimension=384
