--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,11 @@
             <artifactId>langchain4j-document-transformer-jsoup</artifactId>
             <version>1.6.0-beta12</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.quarkiverse.langchain4j</groupId>
+            <artifactId>quarkus-langchain4j-mcp</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
